--- a/Hakaton/Hakaton/ClientApp/src/app/stores/stores.component.html
+++ b/Hakaton/Hakaton/ClientApp/src/app/stores/stores.component.html
@@ -1,6 +1,53 @@
 <div class="row logo">
     <img src="../../assets/logo.png">
 </div>
-<div class="row logo1">
-    <img src="../../assets/yesh2.png">
+
+<table style = "width :100% " border="1">
+    
+    <tr>
+        <th >מפת הגעה</th>
+        <th>תפוסה</th>
+        <th>שם חנות</th>
+        <th>לוגו</th>
+    </tr>
+    <tr>
+        <td> aaa</td>
+        <td>{{this.helpServise.percent}}</td>
+        <td>בזאר שטראוס </td>
+        <td><img src='../../assets/bazar.png'></td>
+    </tr>
+    <tr>
+        <td>aaa</td>
+        <td>{{this.helpServise.percent}}</td>
+        <td>מזל חזות  </td>
+        <td><img src='../../assets/mazal.png'></td>
+    </tr>
+    <tr>
+        <td>aaa</td>
+        <td>{{this.helpServise.percent}}</td>
+        <td>קידישיק  </td>
+        <td><img src='../../assets/kidishik.jpg'></td>
+    </tr>
+    <tr>
+        <td>aaa</td>
+        <td>{{this.helpServise.percent}}</td>
+        <td>בנים </td>
+        <td><img src='../../assets/banim.jpg'></td>
+    </tr>
+    <tr>
+        <td>aaa</td>
+        <td>{{this.helpServise.percent}}</td>
+        <td>חן  </td>
+        <td><img src='../../assets/chen.png'></td>
+    </tr>
+    <tr>
+        <td>aaa</td>
+        <td>{{this.helpServise.percent}}</td>
+        <td>dolly ball </td>
+        <td><img src='../../assets/dolly.jpg'></td>
+    </tr>
+</table>
+<div class="row">
+    <button class="back" (click)="back()"></button>
+    <button class="home" (click)="home()"></button>
 </div>
