--- a/Hakaton/Hakaton/ClientApp/src/app/main/main.component.css
+++ b/Hakaton/Hakaton/ClientApp/src/app/main/main.component.css
@@ -1,91 +1,96 @@
-.inputWithIcon {
+
+  .all{
+    height: 1000px;
+    width: 500px;
+    margin-left: 300px;
+    background-color: #ce93d8;
     position: relative;
-    border-radius: 34px;
-    position: relative;
-    border: none;
-    margin-top: 30px;
-    padding-left: 20px;
-    background: #FFFFFF;
   }
-  button:focus {
-    outline:0;
+
+  .location{
+    background-image: url('../../assets/location.png');
+    width: 55px;
+    height:50px;
+    margin-bottom: -20;
+    margin-left: 30px;
+    position: absulut;
   }
-  .microphone{
-    position: absolute;
-    top: 40%;
-    left: 5%;
-    width:45px;
-    height:45px;
-    }
-  .searchText{
-      position: absolute;
-      top :5px;
-      left: 54%;
-      width:60%;
-      height:40px;
-      }
-  .search{
-    @include background(inset 18px 18px 30px #D1D9E6,$colorWhite,34px);
-    position: relative;
-    padding: 20px;
-    border: none;
-    margin-top: 30px;
-    padding-left: 20px;
-    background: #FFFFFF;
-    height: 40%;
-    text-indent:230px;
-    font-weight: 600;
-    font-size: 20px;
-   }
-   .active-pink-2 input.form-control[type=text]:focus:not([readonly]) {
-    border-bottom: 1px solid #f48fb1;
-    box-shadow: 0 1px 0 0 #f48fb1;
-  }
-  .active-pink input.form-control[type=text] {
-    border-bottom: 1px solid #f48fb1;
-    box-shadow: 0 1px 0 0 #f48fb1;
-  }
-  .active-purple-2 input.form-control[type=text]:focus:not([readonly]) {
-    border-bottom: 1px solid #ce93d8;
-    box-shadow: 0 1px 0 0 #ce93d8;
-  }
-  .active-purple input.form-control[type=text] {
-    border-bottom: 1px solid #ce93d8;
-    box-shadow: 0 1px 0 0 #ce93d8;
-  }
-  .active-cyan-2 input.form-control[type=text]:focus:not([readonly]) {
-    border-bottom: 1px solid #4dd0e1;
-    box-shadow: 0 1px 0 0 #4dd0e1;
-  }
-  .active-cyan input.form-control[type=text] {
-    border-bottom: 1px solid #4dd0e1;
-    box-shadow: 0 1px 0 0 #4dd0e1;
-  }
-  .active-cyan .fa, .active-cyan-2 .fa {
-    color: #4dd0e1;
-  }
-  .active-purple .fa, .active-purple-2 .fa {
-    color: #ce93d8;
-  }
-  .active-pink .fa, .active-pink-2 .fa {
-    color: #f48fb1;
-  }
-  .mySelect
+  .food
   {
-      width: 100px;
-      height: 100px;
+    text-align: center;
+    font-weight: bold;
+      width: 70px;
+      height: 70px;
       border-radius: 100px;
-      background-image: url('../../assets/bigod.png');
+      background-image: url('../../assets/food.png');
       cursor: pointer;
       text-align: right;
       padding: 15px;
+      position: absulut;
+  }
+  .homeWere
+  {
+    font-weight: bold;
+      width: 70px;
+      height: 70px;
+      border-radius: 100px;
+      background-image: url('../../assets/homeWere.png');
+      cursor: pointer;
+      text-align: right;
+      padding: 15px;
+      position: absulut;
+  }
+  .clothing
+  {
+      width: 70px;
+      height: 70px;
+      border-radius: 100px;
+      background-image: url('../../assets/clothing.png');
+      cursor: pointer;
+      text-align: right;
+      padding: 15px;
+      position: absulut;
+  }
+  .shoes
+  {
+      width: 70px;
+      height: 70px;
+      border-radius: 100px;
+      background-image: url('../../assets/shoes.png');
+      cursor: pointer;
+      text-align: right;
+      padding: 15px;
+      position: absulut;
+  }
+  .different
+  {
+      width: 70px;
+      height: 70px;
+      border-radius: 100px;
+      background-image: url('../../assets/differents.png');
+      cursor: pointer;
+      text-align: right;
+      padding: 15px;
+      position: absulut;
+  }
+  .electronic
+  {
+    width: 70px;
+    height: 70px;
+      border-radius: 100px;
+      background-image: url('../../assets/electronic.png');
+      cursor: pointer;
+      text-align: right;
+      padding: 15px;
+      position: absulut;
   }
   .mySearch{
-width: 450px;
+width: 250px;
 height: 50px;
-margin-left:350px ;
+margin-left:355px ;
+position: absulut;
   }
   .logo{
-      margin-left: 200px;
-      padding-left: 180px;
+      margin-left: 270px;
+      position: absulut;
   }
