--- a/Hakaton/Hakaton/ClientApp/src/app/main/main.component.html
+++ b/Hakaton/Hakaton/ClientApp/src/app/main/main.component.html
@@ -11,64 +11,72 @@
 <div class="row logo">
     <img src="../../assets/logo.png">
   </div>
+  <div class="row">
     <i class="fas fa-search" aria-hidden="true"></i>
-    <input class="mySearch" type="text" placeholder="  ?מה תרצו לחפש"  aria-label="Search">
-
+    <input class="mySearch" type="text" dir="rtl" placeholder="  מה תרצו לחפש?"  aria-label="Search">
+    <button class="location" (click)="location()"></button>
+</div>
 <div class="row" style="margin-top: 20px;">
     <div class="col-md-4"></div>
-    <div class="col-md-3 select-outline">
-        <select class="mdb-select md-form md-outline colorful-select dropdown-primary mySelect" (change)="onChange($event.target.value)">
-            <option value="" disabled selected>מזון</option>
+    <div class="col-md-2 select-outline">
+        <select class="food" (change)="onChange($event.target.value)">
+            <option value="" disabled selected></option>
             <option value="1">רשתות מזון</option>
             <option value="2">מזון מהיר</option>
             <option value="3">קיוסקים</option>
         </select>
+        <p>&nbsp; &nbsp; &nbsp;מזון</p>
     </div>
-    <div class="col-md-3 select-outline">
-        <select class="mdb-select md-form md-outline colorful-select dropdown-primary mySelect" (change)="onChange($event.target.value)">
-            <option value="" disabled selected>כלי בית</option>
+
+    <div class="col-md-2 select-outline">
+        <select class="homeWere" (change)="onChange($event.target.value)">
+            <option value="" disabled selected></option>
             <option value="1">טמבור</option>
             <option value="2">כלי מטבח</option>
             <option value="3">אחסון</option>
             <option value="4">מצעים ומגבות</option>
         </select>
+        <p>&nbsp; &nbsp; כלי בית</p>
     </div>
-    <div class="col-md-3"></div>
+    <div class="col-md-2"></div>
 </div>
 <div class="row" style="margin-top: 30px;">
     <div class="col-md-4"></div>
-    <div class="col-md-3 select-outline">
-        <select class="mdb-select md-form md-outline colorful-select dropdown-primary mySelect">
-            <option value="" disabled selected>ביגוד</option>
+    <div class="col-md-2 select-outline">
+        <select class="clothing">
+            <option value="" disabled selected></option>
             <option value="1">גברים </option>
             <option value="2">נשים</option>
             <option value="3">ילדים</option>
             <option value="4">תינוקות</option>
         </select>
+        <p>&nbsp; &nbsp; &nbsp;ביגוד</p>
     </div>
-    <div class="col-md-3 select-outline">
-        <select class="mdb-select md-form md-outline colorful-select dropdown-primary mySelect">
-            <option value="" disabled selected>הנעלה</option>
+    <div class="col-md-2 select-outline">
+        <select class="shoes">
+            <option value="" disabled selected></option>
             <option value="1">גברים </option>
             <option value="2">נשים</option>
             <option value="3">ילדים</option>
         </select>
+        <p> &nbsp; &nbsp; הנעלה</p>
     </div>
-    <div class="col-md-3"></div>
+    <div class="col-md-2"></div>
 </div>
 <div class="row" style="margin-top: 30px;">
     <div class="col-md-4"></div>
-    <div class="col-md-3 select-outline">
-        <select class="mdb-select md-form md-outline colorful-select dropdown-primary mySelect" >
-            <option value="" disabled selected>מוצרי חשמל</option>
+    <div class="col-md-2 select-outline">
+        <select class="electronic" >
+            <option value="" disabled selected></option>
             <option value="1">מחשבים</option>
             <option value="2">אלקטרוניקה</option>
             <option value="3">שעונים</option>
         </select>
+        <p> מוצרי חשמל</p>
     </div>
-    <div class="col-md-3 select-outline">
-        <select class="mdb-select md-form md-outline colorful-select dropdown-primary mySelect">
-            <option value="" disabled selected>שונות</option>
+    <div class="col-md-2 select-outline">
+        <select class="different">
+            <option value="" disabled selected></option>
             <option value="1">ספרים</option>
             <option value="2">בדים וטקסטיל</option>
             <option value="3">מכשירי כתיבה</option>
@@ -76,6 +84,7 @@
             <option value="5">ריהוט</option>
             <option value="6">משחקים</option>
         </select>
+        <p>&nbsp; &nbsp; שונות</p>
     </div>
-    <div class="col-md-3"></div>
+    <div class="col-md-2"></div>
 </div>
