--- a/Hakaton/Hakaton/ClientApp/src/app/result/result.component.css
+++ b/Hakaton/Hakaton/ClientApp/src/app/result/result.component.css
@@ -1,11 +1,10 @@
 .logo{
-    margin-left: 200px;
-    padding-left: 180px;
-    margin-bottom: 30px;
+    margin-left: 270px;
+    position: absulut;
 }
 .logo1{
     margin-left: 300px;
-    padding-left: 180px;
+    padding-left: 70px;
     margin-bottom: 30px;
 }
 .mySearch{
@@ -15,6 +14,33 @@
     border: none;
 padding-left: 200px;}
 .myLable{
-    margin-top:10px ;
-    margin-left: 700px;
+    /* text-align: center; */
+    /* margin-top:10px ; */
+   /* margin-left: 350px;*/
+    font-size: 25px;
 }
+.melel{
+margin-left: 360px;
+}
+.Search{
+    width: 70px;
+    height: 50px;
+    margin-left: 465px;
+      }
+      .home{
+        width: 70px;
+        height: 70px;
+        margin-top: 50px;;
+        margin-left: 70px;
+       background-image: url('../../assets/homePage.png');
+      font-weight: bold;
+
+      }
+ .back{
+            width: 70px;
+            height: 70px;
+            margin-left: 70px;
+            margin-top: 50px;
+            background-image: url('../../assets/back.png');
+            font-weight: bold;
+              }
