--- a/Hakaton/Hakaton/ClientApp/src/app/search/search.component.css
+++ b/Hakaton/Hakaton/ClientApp/src/app/search/search.component.css
@@ -1,24 +1,43 @@
 .logo{
-    margin-left: 200px;
-    padding-left: 180px;
-    margin-bottom: 30px;
+  margin-left: 270px;
+  position: absulut;
 }
 .mySearch{
-    width: 420px;
+    width: 320px;
     height: 50px;
-    margin-left: 450px;
+    margin-left: 390px;
+    padding-left: 215px;
       }
 .myLable{
-    margin-top:10px ;
-    margin-left: 700px;
+    margin-top:40px ;
+    margin-left: 540px;
 
     }
-    .Search{
-        width: 70px;
-        height: 50px;
-        margin-left: 465px;
-          }
-          .mySearch1{
-            width: 350px;
+  .Search{
+      width: 50px;
+      height: 50px;
+      margin-left: 405px;
+      background-image: url('../../assets/search.png');
+        }
+   .home{
+          width: 70px;
+          height: 70px;
+          margin-top: 100px;;
+          margin-left: 70px;
+         background-image: url('../../assets/homePage.png');
+        font-weight: bold;
+
+        }
+   .back{
+              width: 70px;
+              height: 70px;
+              margin-left: 435px;
+              margin-top: 100px;
+              background-image: url('../../assets/back.png');
+              font-weight: bold;
+                }
+    .mySearch1{
+            width: 270px;
             height: 50px;
+            
           }
