--- a/Hakaton/Hakaton/ClientApp/src/app/stores/stores.component.css
+++ b/Hakaton/Hakaton/ClientApp/src/app/stores/stores.component.css
@@ -1,10 +1,26 @@
 .logo{
-    margin-left: 200px;
-    padding-left: 180px;
-    margin-bottom: 30px;
+    margin-left: 270px;
+    position: absulut;
 }
 .logo1{
     margin-left: 300px;
     padding-left: 180px;
     margin-bottom: 30px;
 }
+.home{
+    width: 70px;
+    height: 70px;
+    margin-top: 100px;;
+    margin-left: 70px;
+   background-image: url('../../assets/homePage.png');
+  font-weight: bold;
+
+  }
+.back{
+        width: 70px;
+        height: 70px;
+        margin-left: 435px;
+        margin-top: 100px;
+        background-image: url('../../assets/back.png');
+        font-weight: bold;
+          }
